Fixes compilation errors